--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,6 @@
     "axios": "^0.24.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "leaflet": "^1.7.1",
     "qs": "^6.10.2",
     "sockjs": "^0.3.24",
     "stompjs": "^2.3.3",
@@ -22,7 +21,7 @@
     "vue-plotly": "^1.1.0",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.11",
-    "vue2-leaflet": "^2.7.1",
+    "vuelayers": "^0.12.1",
     "vuex": "^3.6.2",
     "websocket": "^1.0.34",
     "youtube-player": "^5.5.2"
